# smile

./: .gitignore  Doxyfile  INSTALL  README.md  clear  makeDriver
document/: class.zargo
document/CdC/: CdC.tex
document/DAC/: DAC.tex
document/MU/: MU.tex
document/MdP/: MdP.tex
document/PdD/: Gantt.gan  Gantt_wDep.gan  PdD.tex
document/RdT/: RdT.tex
document/dependance/: biblio.bib  cdc.kilepr  pdd.kilepr  title_page.tex
document/scripts/: build  buildAux  clear
document/slides/: pratique.tex  presentation.nav  presentation.tex  show  theorie.tex
document/slides/images/: trimImg
driver/: CMakeLists.txt  clearLearn  killProcess  learnIA  memory  path  playIA  updateServ
driver/cmake/Modules/: FindSmile.cmake  FindTorcsLibs.cmake
driver/data/: smile.xml
driver/include/: Driver.hpp  DriverFeedback.hpp  QLearnDiscr.hpp  QLearnDiscr2.hpp  QLearnDiscr2.hpp.old  QLearnGen.hpp  QLearnGenCmplx.hpp  QLearnGenCmplx.hpp.old  QLearnGenFdb.hpp  QLearnGenFdb.hpp.old  SarsaFdb.hpp  SarsaFdb.hpp.old  TFeatures.hpp  TWorld.hpp
driver/src/: Driver.cpp  DriverFeedback.cpp  QLearnDiscr.cpp  QLearnDiscr2.cpp  QLearnDiscr2.cpp.old  QLearnGen.cpp  QLearnGenCmplx.cpp  QLearnGenCmplx.cpp.old  QLearnGenFdb.cpp  QLearnGenFdb.cpp.old  SarsaFdb.cpp.old  TFeatures.cpp  TWorld.cpp  smile.cpp
driver/workingState/: smile0.data  smile1.data  smile2.data  smile4.data
src/: buildTorcs  updateDriverFully
src/driver/: CMakeLists.txt  Driver.cpp  Driver.hpp  QLearnDiscr.cpp  QLearnDiscr.hpp  smile.cpp  smile.xml  updateBinary  watchLearnProgress
src/driver.gtk.old/: Makefile  compil
src/smile/: CMakeLists.txt
src/smile.gtk.old/: lan.xml  smile.cpp  test.c  test.h
src/smile.gtk.old/0/: Makefile
src/smile/include/sml/: SaveLoad.hpp  Utils.hpp
src/smile/src/: SaveLoad.cpp  Utils.cpp
src/xml/: screen.xml
torcs/: buildTorcs  getTorcs  uninstall
torcs/export/include/: car.h  graphic.h  osspec.h  raceman.h  robot.h  robottools.h  screen_properties.h  simu.h  tgf.h  tgfclient.h  track.h
torcs/export/include/tmath/: linalg_t.h  straight2_t.h  v2_t.h  v3_t.h  v4_t.h
torcs/patch/: raceengine.patch
torcs/xml/: dtmrace0.xml  dtmrace1.xml  dtmrace2.xml  dtmrace3.xml  dtmrace4.xml  dtmrace5.xml  graph.xml  quickrace.xml  quickraceO.xml
